added new image Jimbaran

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>Added a new branch.</p>
     <img src="/gitdemo/beach_unsplash.jpg" alt="beach unsplash" style="width: 100%; max-width: 960px;">
     <p>And an image.</p>
+    <p>And Jimbaran Bay.</p>
+    <img class="jimbaran" src="/gitdemo/jimbaran.jpg" alt="jimbaran">
 </body>
 </html>
