--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
+    <p>This line is here to show how merging works.</p>
+    <p>Added a new branch.</p>
+    <img src="/gitdemo/beach_unsplash.jpg" alt="beach unsplash" style="width: 100%; max-width: 960px;">
+    <p>And an image.</p>
+    <p>And Jimbaran Bay.</p>
+    <img class="jimbaran" src="/gitdemo/jimbaran.jpg" alt="jimbaran">
 </body>
 </html>
