--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p>A new line in our file!</p>
     <p>This line is here to show how merging works.</p>
     <p>Added a new branch.</p>
-    <img src="/beach_unsplash.jpg" alt="beach unsplash" style="width: 100%; max-width: 960px;">
+    <img src="beach_unsplash.jpg" alt="beach unsplash" style="width: 100%; max-width: 960px;">
     <p>And an image.</p>
     <p>And Jimbaran Bay.</p>
-    <img class="jimbaran" src="/gitdemo/jimbaran.jpg" alt="jimbaran">
+    <img class="jimbaran" src="jimbaran.jpg" alt="jimbaran">
 </body>
 </html>
