--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p>And an image.</p>
     <p>And Jimbaran Bay.</p>
     <img class="jimbaran" src="jimbaran.jpg" alt="jimbaran">
+    <p>Branch Work</p>
 </body>
 </html>
